--- a/.yamato/vikingvillage_urp-osx-metal.yml
+++ b/.yamato/vikingvillage_urp-osx-metal.yml
@@ -16,11 +16,11 @@ VikingVillage_URP_OSX_Metal_performance_playmode_runtime_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
@@ -66,11 +66,11 @@ VikingVillage_URP_OSX_Metal_performance_playmode_editor_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
@@ -116,11 +116,11 @@ VikingVillage_URP_OSX_Metal_performance_build_editmode_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
@@ -167,11 +167,11 @@ VikingVillage_URP_OSX_Metal_performance_playmode_runtime_mono_Linear_CUSTOM-REVI
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
@@ -221,11 +221,11 @@ VikingVillage_URP_OSX_Metal_performance_playmode_editor_mono_Linear_CUSTOM-REVIS
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
@@ -275,11 +275,11 @@ VikingVillage_URP_OSX_Metal_performance_build_editmode_mono_Linear_CUSTOM-REVISI
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git -b $VV_URP_BRANCH TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout $VV_URP_REVISION
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-config
