--- a/.yamato/vikingvillage_urp-win-dx12.yml
+++ b/.yamato/vikingvillage_urp-win-dx12.yml
@@ -17,7 +17,7 @@ VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -46,11 +46,11 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -98,11 +98,11 @@ VikingVillage_URP_Win_DX12_performance_playmode_editor_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -146,11 +146,11 @@ VikingVillage_URP_Win_DX12_performance_build_editmode_mono_Linear_trunk:
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -196,7 +196,7 @@ VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_CUSTOM-REVIS
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -228,11 +228,11 @@ Build_VikingVillage_URP_Win_DX12_performance_playmode_runtime_mono_Linear_CUSTOM
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -284,11 +284,11 @@ VikingVillage_URP_Win_DX12_performance_playmode_editor_mono_Linear_CUSTOM-REVISI
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -336,11 +336,11 @@ VikingVillage_URP_Win_DX12_performance_build_editmode_mono_Linear_CUSTOM-REVISIO
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
         VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_REVISION: fe0b9a08753e3b0b873a0be53cffd37b8f5f2f18
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
-      -  git clone https://github.cds.internal.unity3d.com/andrew-theisen/Viking-Village-Perf.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
+      -  git clone https://github.com/Unity-Technologies/VikingVillage.git  -b %VV_URP_BRANCH% TestProjects/Viking-Village-Perf
       -  cd TestProjects/Viking-Village-Perf && git checkout %VV_URP_REVISION%
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
