*Push temporary debug symbols

--- a/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
+++ b/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
@@ -20,6 +20,9 @@ HLSLPROGRAM
 // Pragmas
 $splice(PassPragmas)
 
+//TODOPAUL : Remove this
+#pragma enable_d3d11_debug_symbols
+
 $splice(DotsInstancingOptions)
 $splice(HybridV1InjectedBuiltinProperties)
 
